fixing alignements in the products section

--- a/src/Style/App.scss
+++ b/src/Style/App.scss
@@ -431,7 +431,6 @@
       }
       .product-details {
         height: 20%;
-        align-items: center;
         .product-title {
           text-align: center;
         }
@@ -444,9 +443,15 @@
     .product-illustration {
       height: 100%;
       width: 50%;
+      position: relative;
       .product-illustration-img {
         height: 100%;
         width: 100%;
+        &.center {
+          position: absolute;
+          top: 0;
+          left: -5%;
+        }
       }
     }
     .product-details {
@@ -454,35 +459,19 @@
       width: 50%;
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
+      align-items: center;
       justify-content: center;
       margin: 0;
 
-      &.start {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-      }
-
-      &.end {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-end;
-        .product-description {
-          padding-right: 4rem;
-        }
-      }
       .product-title {
-        width: 90%;
+        width: 80%;
         .page-title {
           font-size: 3.5rem;
           line-height: 3.75rem;
         }
       }
       .product-description {
-        width: 90%;
+        width: 80%;
         margin: 1rem 0;
         margin-bottom: 0.5rem;
         &:last-child {
